@@ -1,4 +1,12 @@
 
+Изменения в nginx 1.15.5                                          02.10.2018
+
+    *) Исправление: при использовании OpenSSL 1.1.0h и новее в рабочем
+       процессе мог произойти segmentation fault; ошибка появилась в 1.15.4.
+
+    *) Исправление: незначительных потенциальных ошибок.
+
+
 Изменения в nginx 1.15.4                                          25.09.2018
 
     *) Добавление: теперь директиву ssl_early_data можно использовать с
