@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2018-10-02">
+<para>
+<link doc="en/download.xml">nginx-1.15.5</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2018-09-25">
 <para>
 <link doc="en/download.xml">nginx-1.15.4</link>
