@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.15.5" />
 <item ver="1.15.4" />
 <item ver="1.15.3" />
 <item ver="1.15.2" />
