@@ -1,4 +1,12 @@
 
+Changes with nginx 1.15.5                                        02 Oct 2018
+
+    *) Bugfix: a segmentation fault might occur in a worker process when
+       using OpenSSL 1.1.0h or newer; the bug had appeared in 1.15.4.
+
+    *) Bugfix: of minor potential bugs.
+
+
 Changes with nginx 1.15.4                                        25 Sep 2018
 
     *) Feature: now the "ssl_early_data" directive can be used with OpenSSL.
